objects/ssot__ManagedEvent__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDateTime__c</fullName>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EstimatedParticipantCount__c</fullName>
        <label>Estimated Participant Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__EventURL__c</fullName>
        <label>Event URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Managed Event Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LocationId__c</fullName>
        <label>Location</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ManagedEventMode__c</fullName>
        <label>Mode</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ManagedEventNumber__c</fullName>
        <label>Managed Event Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ManagedEventStatus__c</fullName>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ManagedEventTypeId__c</fullName>
        <label>Managed EventType</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDateTime__c</fullName>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__UniqueEventNumber__c</fullName>
        <label>Unique Event Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1738250280166_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ManagedEvent_ManagedEventTypeId_map__rel</label>
        <referenceTo>ssot__ManagedEventType__dlm</referenceTo>
        <relationshipLabel>ManagedEvent_ManagedEventTypeId_map__rel</relationshipLabel>
        <relationshipName>rel_1738250280166_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1738250282688_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ManagedEvent_LocationId_map_Location_rel</label>
        <referenceTo>ssot__Location__dlm</referenceTo>
        <relationshipLabel>ManagedEvent_LocationId_map_Location_rel</relationshipLabel>
        <relationshipName>rel_1738250282688_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>